--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.3.0",
     "core-js": "^3.4.3",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
