tnh de ir dormir pq amanha (hoje) temos ap de Fap

--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
     "rules": {},
     "parserOptions": {
       "parser": "babel-eslint"
-    }
+    },
+    "globals": {
+      "google":{}
+ }
   },
   "browserslist": [
     "> 1%",
