--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "popper.js": "^1.16.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vue-sweetalert2": "^3.0.1",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
